antlr4/SimpleSqlParser.cpp

// Generated from SimpleSql.g4 by ANTLR 4.7.1


#include "SimpleSqlListener.h"

#include "SimpleSqlParser.h"


using namespace antlrcpp;
using namespace antlr4;

SimpleSqlParser::SimpleSqlParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

SimpleSqlParser::~SimpleSqlParser() {
  delete _interpreter;
}

std::string SimpleSqlParser::getGrammarFileName() const {
  return "SimpleSql.g4";
}

const std::vector<std::string>& SimpleSqlParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& SimpleSqlParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- RootContext ------------------------------------------------------------------

SimpleSqlParser::RootContext::RootContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SimpleSqlParser::RootContext::EOF() {
  return getToken(SimpleSqlParser::EOF, 0);
}

std::vector<SimpleSqlParser::CrudStmtContext *> SimpleSqlParser::RootContext::crudStmt() {
  return getRuleContexts<SimpleSqlParser::CrudStmtContext>();
}

SimpleSqlParser::CrudStmtContext* SimpleSqlParser::RootContext::crudStmt(size_t i) {
  return getRuleContext<SimpleSqlParser::CrudStmtContext>(i);
}


size_t SimpleSqlParser::RootContext::getRuleIndex() const {
  return SimpleSqlParser::RuleRoot;
}

void SimpleSqlParser::RootContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleSqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRoot(this);
}

void SimpleSqlParser::RootContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleSqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRoot(this);
}

SimpleSqlParser::RootContext* SimpleSqlParser::root() {
  RootContext *_localctx = _tracker.createInstance<RootContext>(_ctx, getState());
  enterRule(_localctx, 0, SimpleSqlParser::RuleRoot);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(63); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(62);
      crudStmt();
      setState(65); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == SimpleSqlParser::SELECT || ((((_la - 65) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 65)) & ((1ULL << (SimpleSqlParser::INSERT - 65))
      | (1ULL << (SimpleSqlParser::UPDATE - 65))
      | (1ULL << (SimpleSqlParser::DELETE - 65)))) != 0));
    setState(67);
    match(SimpleSqlParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CrudStmtContext ------------------------------------------------------------------

SimpleSqlParser::CrudStmtContext::CrudStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SimpleSqlParser::InsertStmtContext* SimpleSqlParser::CrudStmtContext::insertStmt() {
  return getRuleContext<SimpleSqlParser::InsertStmtContext>(0);
}

SimpleSqlParser::SelectStmtContext* SimpleSqlParser::CrudStmtContext::selectStmt() {
  return getRuleContext<SimpleSqlParser::SelectStmtContext>(0);
}

SimpleSqlParser::UpdateStmtContext* SimpleSqlParser::CrudStmtContext::updateStmt() {
  return getRuleContext<SimpleSqlParser::UpdateStmtContext>(0);
}

SimpleSqlParser::DeleteStmtContext* SimpleSqlParser::CrudStmtContext::deleteStmt() {
  return getRuleContext<SimpleSqlParser::DeleteStmtContext>(0);
}

tree::TerminalNode* SimpleSqlParser::CrudStmtContext::SEMI() {
  return getToken(SimpleSqlParser::SEMI, 0);
}


size_t SimpleSqlParser::CrudStmtContext::getRuleIndex() const {
  return SimpleSqlParser::RuleCrudStmt;
}

void SimpleSqlParser::CrudStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleSqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCrudStmt(this);
}

void SimpleSqlParser::CrudStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleSqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCrudStmt(this);
}

SimpleSqlParser::CrudStmtContext* SimpleSqlParser::crudStmt() {
  CrudStmtContext *_localctx = _tracker.createInstance<CrudStmtContext>(_ctx, getState());
  enterRule(_localctx, 2, SimpleSqlParser::RuleCrudStmt);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(73);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SimpleSqlParser::INSERT: {
        setState(69);
        insertStmt();
        break;
      }

      case SimpleSqlParser::SELECT: {
        setState(70);
        selectStmt();
        break;
      }

      case SimpleSqlParser::UPDATE: {
        setState(71);
        updateStmt();
        break;
      }

      case SimpleSqlParser::DELETE: {
        setState(72);
        deleteStmt();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(76);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SimpleSqlParser::SEMI) {
      setState(75);
      match(SimpleSqlParser::SEMI);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InsertStmtContext ------------------------------------------------------------------

SimpleSqlParser::InsertStmtContext::InsertStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SimpleSqlParser::InsertStmtContext::INSERT() {
  return getToken(SimpleSqlParser::INSERT, 0);
}

SimpleSqlParser::TableNameContext* SimpleSqlParser::InsertStmtContext::tableName() {
  return getRuleContext<SimpleSqlParser::TableNameContext>(0);
}

SimpleSqlParser::InsertStmtValueContext* SimpleSqlParser::InsertStmtContext::insertStmtValue() {
  return getRuleContext<SimpleSqlParser::InsertStmtValueContext>(0);
}

tree::TerminalNode* SimpleSqlParser::InsertStmtContext::SET() {
  return getToken(SimpleSqlParser::SET, 0);
}

tree::TerminalNode* SimpleSqlParser::InsertStmtContext::IGNORE() {
  return getToken(SimpleSqlParser::IGNORE, 0);
}

tree::TerminalNode* SimpleSqlParser::InsertStmtContext::INTO() {
  return getToken(SimpleSqlParser::INTO, 0);
}

std::vector<SimpleSqlParser::UpdatedElementContext *> SimpleSqlParser::InsertStmtContext::updatedElement() {
  return getRuleContexts<SimpleSqlParser::UpdatedElementContext>();
}

SimpleSqlParser::UpdatedElementContext* SimpleSqlParser::InsertStmtContext::updatedElement(size_t i) {
  return getRuleContext<SimpleSqlParser::UpdatedElementContext>(i);
}

tree::TerminalNode* SimpleSqlParser::InsertStmtContext::ON() {
  return getToken(SimpleSqlParser::ON, 0);
}

tree::TerminalNode* SimpleSqlParser::InsertStmtContext::DUPLICATE() {
  return getToken(SimpleSqlParser::DUPLICATE, 0);
}

tree::TerminalNode* SimpleSqlParser::InsertStmtContext::KEY() {
  return getToken(SimpleSqlParser::KEY, 0);
}

tree::TerminalNode* SimpleSqlParser::InsertStmtContext::UPDATE() {
  return getToken(SimpleSqlParser::UPDATE, 0);
}

tree::TerminalNode* SimpleSqlParser::InsertStmtContext::LPAREN() {
  return getToken(SimpleSqlParser::LPAREN, 0);
}

tree::TerminalNode* SimpleSqlParser::InsertStmtContext::RPAREN() {
  return getToken(SimpleSqlParser::RPAREN, 0);
}

std::vector<tree::TerminalNode *> SimpleSqlParser::InsertStmtContext::COMMA() {
  return getTokens(SimpleSqlParser::COMMA);
}

tree::TerminalNode* SimpleSqlParser::InsertStmtContext::COMMA(size_t i) {
  return getToken(SimpleSqlParser::COMMA, i);
}

SimpleSqlParser::IdListContext* SimpleSqlParser::InsertStmtContext::idList() {
  return getRuleContext<SimpleSqlParser::IdListContext>(0);
}


size_t SimpleSqlParser::InsertStmtContext::getRuleIndex() const {
  return SimpleSqlParser::RuleInsertStmt;
}

void SimpleSqlParser::InsertStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleSqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInsertStmt(this);
}

void SimpleSqlParser::InsertStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleSqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInsertStmt(this);
}

SimpleSqlParser::InsertStmtContext* SimpleSqlParser::insertStmt() {
  InsertStmtContext *_localctx = _tracker.createInstance<InsertStmtContext>(_ctx, getState());
  enterRule(_localctx, 4, SimpleSqlParser::RuleInsertStmt);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(78);
    match(SimpleSqlParser::INSERT);
    setState(80);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SimpleSqlParser::IGNORE) {
      setState(79);
      match(SimpleSqlParser::IGNORE);
    }
    setState(83);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SimpleSqlParser::INTO) {
      setState(82);
      match(SimpleSqlParser::INTO);
    }
    setState(85);
    tableName();
    setState(102);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SimpleSqlParser::SELECT:
      case SimpleSqlParser::LPAREN:
      case SimpleSqlParser::VALUE:
      case SimpleSqlParser::VALUES: {
        setState(90);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == SimpleSqlParser::LPAREN) {
          setState(86);
          match(SimpleSqlParser::LPAREN);
          setState(87);
          dynamic_cast<InsertStmtContext *>(_localctx)->columns = idList();
          setState(88);
          match(SimpleSqlParser::RPAREN);
        }
        setState(92);
        insertStmtValue();
        break;
      }

      case SimpleSqlParser::SET: {
        setState(93);
        match(SimpleSqlParser::SET);
        setState(94);
        dynamic_cast<InsertStmtContext *>(_localctx)->setElement = updatedElement();
        setState(99);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == SimpleSqlParser::COMMA) {
          setState(95);
          match(SimpleSqlParser::COMMA);
          setState(96);
          dynamic_cast<InsertStmtContext *>(_localctx)->updatedElementContext = updatedElement();
          dynamic_cast<InsertStmtContext *>(_localctx)->setElements.push_back(dynamic_cast<InsertStmtContext *>(_localctx)->updatedElementContext);
          setState(101);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(116);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SimpleSqlParser::ON) {
      setState(104);
      match(SimpleSqlParser::ON);
      setState(105);
      match(SimpleSqlParser::DUPLICATE);
      setState(106);
      match(SimpleSqlParser::KEY);
      setState(107);
      match(SimpleSqlParser::UPDATE);
      setState(108);
      dynamic_cast<InsertStmtContext *>(_localctx)->duplicatedElement = updatedElement();
      setState(113);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == SimpleSqlParser::COMMA) {
        setState(109);
        match(SimpleSqlParser::COMMA);
        setState(110);
        dynamic_cast<InsertStmtContext *>(_localctx)->updatedElementContext = updatedElement();
        dynamic_cast<InsertStmtContext *>(_localctx)->duplicatedElements.push_back(dynamic_cast<InsertStmtContext *>(_localctx)->updatedElementContext);
        setState(115);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SelectStmtContext ------------------------------------------------------------------

SimpleSqlParser::SelectStmtContext::SelectStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SimpleSqlParser::SelectStmtContext::SELECT() {
  return getToken(SimpleSqlParser::SELECT, 0);
}

SimpleSqlParser::ColumnStmtContext* SimpleSqlParser::SelectStmtContext::columnStmt() {
  return getRuleContext<SimpleSqlParser::ColumnStmtContext>(0);
}

SimpleSqlParser::FromStmtContext* SimpleSqlParser::SelectStmtContext::fromStmt() {
  return getRuleContext<SimpleSqlParser::FromStmtContext>(0);
}

SimpleSqlParser::WhereStmtContext* SimpleSqlParser::SelectStmtContext::whereStmt() {
  return getRuleContext<SimpleSqlParser::WhereStmtContext>(0);
}

SimpleSqlParser::LimitStmtContext* SimpleSqlParser::SelectStmtContext::limitStmt() {
  return getRuleContext<SimpleSqlParser::LimitStmtContext>(0);
}

SimpleSqlParser::OffsetStmtContext* SimpleSqlParser::SelectStmtContext::offsetStmt() {
  return getRuleContext<SimpleSqlParser::OffsetStmtContext>(0);
}

SimpleSqlParser::OrderbyStmtContext* SimpleSqlParser::SelectStmtContext::orderbyStmt() {
  return getRuleContext<SimpleSqlParser::OrderbyStmtContext>(0);
}

SimpleSqlParser::GroupbyStmtContext* SimpleSqlParser::SelectStmtContext::groupbyStmt() {
  return getRuleContext<SimpleSqlParser::GroupbyStmtContext>(0);
}

std::vector<tree::TerminalNode *> SimpleSqlParser::SelectStmtContext::UNION() {
  return getTokens(SimpleSqlParser::UNION);
}

tree::TerminalNode* SimpleSqlParser::SelectStmtContext::UNION(size_t i) {
  return getToken(SimpleSqlParser::UNION, i);
}

std::vector<SimpleSqlParser::SelectStmtContext *> SimpleSqlParser::SelectStmtContext::selectStmt() {
  return getRuleContexts<SimpleSqlParser::SelectStmtContext>();
}

SimpleSqlParser::SelectStmtContext* SimpleSqlParser::SelectStmtContext::selectStmt(size_t i) {
  return getRuleContext<SimpleSqlParser::SelectStmtContext>(i);
}


size_t SimpleSqlParser::SelectStmtContext::getRuleIndex() const {
  return SimpleSqlParser::RuleSelectStmt;
}

void SimpleSqlParser::SelectStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleSqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSelectStmt(this);
}

void SimpleSqlParser::SelectStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleSqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSelectStmt(this);
}

SimpleSqlParser::SelectStmtContext* SimpleSqlParser::selectStmt() {
  SelectStmtContext *_localctx = _tracker.createInstance<SelectStmtContext>(_ctx, getState());
  enterRule(_localctx, 6, SimpleSqlParser::RuleSelectStmt);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(118);
    match(SimpleSqlParser::SELECT);
    setState(119);
    columnStmt();
    setState(120);
    fromStmt();
    setState(122);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SimpleSqlParser::WHERE) {
      setState(121);
      whereStmt();
    }
    setState(125);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SimpleSqlParser::LIMIT) {
      setState(124);
      limitStmt();
    }
    setState(128);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SimpleSqlParser::OFFSET) {
      setState(127);
      offsetStmt();
    }
    setState(131);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SimpleSqlParser::ORDER) {
      setState(130);
      orderbyStmt();
    }
    setState(134);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SimpleSqlParser::GROUP) {
      setState(133);
      groupbyStmt();
    }
    setState(140);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 15, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(136);
        match(SimpleSqlParser::UNION);
        setState(137);
        selectStmt(); 
      }
      setState(142);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 15, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UpdateStmtContext ------------------------------------------------------------------

SimpleSqlParser::UpdateStmtContext::UpdateStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SimpleSqlParser::UpdateStmtContext::UPDATE() {
  return getToken(SimpleSqlParser::UPDATE, 0);
}

SimpleSqlParser::TableSourcesContext* SimpleSqlParser::UpdateStmtContext::tableSources() {
  return getRuleContext<SimpleSqlParser::TableSourcesContext>(0);
}

tree::TerminalNode* SimpleSqlParser::UpdateStmtContext::SET() {
  return getToken(SimpleSqlParser::SET, 0);
}

std::vector<SimpleSqlParser::UpdatedElementContext *> SimpleSqlParser::UpdateStmtContext::updatedElement() {
  return getRuleContexts<SimpleSqlParser::UpdatedElementContext>();
}

SimpleSqlParser::UpdatedElementContext* SimpleSqlParser::UpdateStmtContext::updatedElement(size_t i) {
  return getRuleContext<SimpleSqlParser::UpdatedElementContext>(i);
}

tree::TerminalNode* SimpleSqlParser::UpdateStmtContext::IGNORE() {
  return getToken(SimpleSqlParser::IGNORE, 0);
}

std::vector<tree::TerminalNode *> SimpleSqlParser::UpdateStmtContext::COMMA() {
  return getTokens(SimpleSqlParser::COMMA);
}

tree::TerminalNode* SimpleSqlParser::UpdateStmtContext::COMMA(size_t i) {
  return getToken(SimpleSqlParser::COMMA, i);
}

SimpleSqlParser::WhereStmtContext* SimpleSqlParser::UpdateStmtContext::whereStmt() {
  return getRuleContext<SimpleSqlParser::WhereStmtContext>(0);
}

SimpleSqlParser::LimitStmtContext* SimpleSqlParser::UpdateStmtContext::limitStmt() {
  return getRuleContext<SimpleSqlParser::LimitStmtContext>(0);
}

SimpleSqlParser::OffsetStmtContext* SimpleSqlParser::UpdateStmtContext::offsetStmt() {
  return getRuleContext<SimpleSqlParser::OffsetStmtContext>(0);
}

SimpleSqlParser::OrderbyStmtContext* SimpleSqlParser::UpdateStmtContext::orderbyStmt() {
  return getRuleContext<SimpleSqlParser::OrderbyStmtContext>(0);
}


size_t SimpleSqlParser::UpdateStmtContext::getRuleIndex() const {
  return SimpleSqlParser::RuleUpdateStmt;
}

void SimpleSqlParser::UpdateStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleSqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUpdateStmt(this);
}

void SimpleSqlParser::UpdateStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleSqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUpdateStmt(this);
}

SimpleSqlParser::UpdateStmtContext* SimpleSqlParser::updateStmt() {
  UpdateStmtContext *_localctx = _tracker.createInstance<UpdateStmtContext>(_ctx, getState());
  enterRule(_localctx, 8, SimpleSqlParser::RuleUpdateStmt);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(143);
    match(SimpleSqlParser::UPDATE);
    setState(145);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SimpleSqlParser::IGNORE) {
      setState(144);
      match(SimpleSqlParser::IGNORE);
    }
    setState(147);
    tableSources();
    setState(148);
    match(SimpleSqlParser::SET);
    setState(149);
    updatedElement();
    setState(154);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SimpleSqlParser::COMMA) {
      setState(150);
      match(SimpleSqlParser::COMMA);
      setState(151);
      updatedElement();
      setState(156);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(158);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SimpleSqlParser::WHERE) {
      setState(157);
      whereStmt();
    }
    setState(161);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SimpleSqlParser::LIMIT) {
      setState(160);
      limitStmt();
    }
    setState(164);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SimpleSqlParser::OFFSET) {
      setState(163);
      offsetStmt();
    }
    setState(167);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SimpleSqlParser::ORDER) {
      setState(166);
      orderbyStmt();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeleteStmtContext ------------------------------------------------------------------

SimpleSqlParser::DeleteStmtContext::DeleteStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SimpleSqlParser::DeleteStmtContext::DELETE() {
  return getToken(SimpleSqlParser::DELETE, 0);
}

tree::TerminalNode* SimpleSqlParser::DeleteStmtContext::FROM() {
  return getToken(SimpleSqlParser::FROM, 0);
}
